deploy/kustomise/overlays/prod/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-site
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`michael-bailey.net`)
      kind: Rule
      services:
        - name: portfolio-site
          port: 80
    - match: Host(`www.michael-bailey.net`)
      kind: Rule
      services:
        - name: portfolio-site
          port: 80
  tls:
    secretName: portfolio-site-tls
